passing state service host as env variable